PMD/Codacity fixes
Also, over-ride `statusOnMountpoint` in `TestImapViaImapDaemon` as saw it
failing, which doesn't surprise me as there is a timing problem which
should be fixed when ZCS-1856 is addressed.