@@ -485,7 +485,7 @@ public abstract class ImapTestBase {
             Pattern patt = Pattern.compile(regexPatt);
             AccessBoundedRegex re = new AccessBoundedRegex(patt, maxAccesses);
             assertEquals(String.format("matching '%s' against pattern '%s'", target, patt),
-                    expected, new Boolean(re.matches(target)));
+                    expected, Boolean.valueOf(re.matches(target)));
         } catch (AccessBoundedRegex.TooManyAccessesToMatchTargetException se) {
             assertTrue("Throwing exception considered OK", timeoutOk);
         }
